--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.5",
     "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "1.1.1",
     "typeface-roboto": "0.0.54"
   },
@@ -18,7 +21,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-router-dom": "^5.0.0",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-order": "^2.1.0",
