--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.5",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "^1.0.0-beta.17",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "1.1.1",
+    "redux": "^4.0.1",
     "typeface-roboto": "0.0.54"
   },
   "eslintConfig": {
