--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "^1.0.0-beta.17",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
